# MediaHubAI

./: .gitignore  README.md  api.py  app.py  cookies.json  packages.txt  pyproject.toml  requirements-ai.txt  requirements-dev.txt  requirements.txt
cookies/: instagram.txt
core/: __init__.py  catalogs.py  errors.py  models.py
docs/: shorts_pipeline_analysis.md
downloaders/: __init__.py  base.py  cookies.json  cookies.py  instagram.py  tiktok.py  twitter.py  universal.py  youtube.py
providers/: __init__.py  base.py  local_transcriber.py  openai_transcriber.py
services/: __init__.py  captions.py  ffmpeg.py  geometry.py  hardware.py  layout_engine.py  reaction_detector.py  renderer.py  scene_detector.py  short_creator.py  short_pipeline.py  shorts_config.py  tracker.py  transcription.py  video_loader.py  viral_analyzer.py  webcam_detector.py
templates/: reaction_top.json
tests/: test_captions.py  test_cookie_manager.py  test_ffmpeg_bootstrap.py  test_filter_graphs.py  test_hardware_encoding.py  test_models.py  test_tracker.py  test_viral_analyzer.py
ui/: components.py  main_window.py  themes.py
