[project]
name = "clipforge-local"
version = "0.2.0"
description = "Estúdio desktop local para downloads e criação automatizada de vídeos curtos"
requires-python = ">=3.11"
dependencies = [
  "yt-dlp>=2025.06.30",
  "pillow>=11.0,<13",
  "requests>=2.32,<3",
  "streamlit>=1.24,<2",
  "fastapi>=0.109,<1",
  "uvicorn[standard]>=0.23,<1",
  "openai>=1.0,<3",
]

[project.optional-dependencies]
ai = [
  "faster-whisper>=1.1,<2",
  "opencv-python>=4.10,<5",
]
dev = [
  "pytest>=8.3,<10",
  "ruff>=0.9,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 110
exclude = ["venv", ".venv", "downloads"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

